[tool.poetry]
name = "zedchi_bem_fs_maker"
version = "0.1.2"
description = "bem filesystem maker from html"
authors = ["zed-chi <zed-chi@mail.ru>"]
license = "MIT"
packages = [
    { include="bem_fs_maker", from="." },
]


[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
bem_fs = "bem_fs_maker.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
